first commit with app ready for deployment

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <body>
 	<!--header-->
 	<div class="header">
+	
 		<div class="social-icons">
 				<ul>
 					<li><a href="#"> </a></li>
@@ -70,11 +71,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-9 top-nav">
 				<span class="menu"><img src="static/images/homepage/menu-icon.png" alt=""/></span>
 				<ul class="nav1">
-					<li><a href="index.html" class="active">HOME</a></li>
-					<li><a href="about.html">ABOUT</a></li>
-					<li><a href="portfolio.html">PORTFOLIO</a></li>
-					<li><a href="samplepage.html">SAMPLE PAGE</a></li>
-					<li><a href="contact.html" >CONTACT</a></li>
+					<li><a href="booty" class="active">Print</a></li>
+					<li><a href="about.html">Explore</a></li>
+					<li><a href="portfolio.html">News</a></li>
+					<li><a href="samplepage.html">Login</a></li>
+					<li><a href="contact.html" >Sign up</a></li>
 				</ul>	
 				<!-- script-for-menu -->
 				 <script>
