first commit with app ready for deployment

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -27,7 +27,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<!-- //Custom Theme files -->
 	<!-- js -->
-	<script src="{%static "/js/jquery.min.js"%}"></script>
+	<script src="{%static "js/jquery.min.js"%}"></script>
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="{%static "js/homepage/carousel.js"%}"></script>
@@ -70,7 +70,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 		<div class="container">
 			<div class="col-md-9 top-nav">
-				<span class="menu"><img src="{%static "/images/homepage/menu-icon.png"%}" alt=""/></span>
+				<span class="menu"><img src="{%static "images/homepage/menu-icon.png"%}" alt=""/></span>
 				<ul class="nav1">
 					<li><a href="booty" class="active">Print</a></li>
 					<li><a href="about.html">Explore</a></li>
@@ -89,7 +89,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- /script-for-menu -->
 			</div>
 			<div class="col-md-3 header-logo">
-				<a href="index.html"><img src="{%static "/images/homepage/logo.png"%}" alt="logo"/></a>
+				<a href="index.html"><img src="{%static "images/homepage/logo.png"%}" alt="logo"/></a>
 			</div>	
 			<div class="clearfix"> </div>
 		</div>	
@@ -159,7 +159,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>	
 	</div>
 	<!--smooth-scrolling-of-move-up-->
-	<script src="{%static "/js/create item/upload.js"%}"></script>
+	<script src="{%static "js/create item/upload.js"%}"></script>
 		<script type="text/javascript">
 									$(document).ready(function() {
 										/*
