--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<!-- //Custom Theme files -->
 	<!-- js -->
-	<script src="static/js/jquery.min.js"></script>
+	<script src={%static "js/jquery.min.js"%}></script>
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="{%static "js/homepage/carousel.js"%}"></script>
