--- a/templates/upload.html
+++ b/templates/upload.html
@@ -14,8 +14,8 @@
     
     
     <script src="{%static "js/jquery.min.js"%}"></script>
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+	<!--  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>-->
+    <script src="{%static "js/bootstrap.min.js"%}/"></script>
   </head>
   <body>
 
