--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,6 +7,11 @@
     <link href="{%static "css/bootstrap.css"%}" type="text/css" rel="stylesheet" media="all">
     <link href="{%static "css/create item/nav-panel.css"%}" type="text/css" rel="stylesheet" media="all">
     <link href="{%static "css/create item/widget.css"%}" type="text/css" rel="stylesheet" media="all">
+    <link href="{%static "css/dropzone.css"%}" type="text/css" rel="stylesheet" media="all">
+    <link href="{%static "css/normalize.css"%}" type="text/css" rel="stylesheet" media="all">
+    <link href="{%static "css/create item/tabs.css"%}" type="text/css" rel="stylesheet" media="all">
+    <link href="{%static "css/create item/tabstyles.css"%}" type="text/css" rel="stylesheet" media="all">
+    
     <script src="{%static "js/React/libraries/react.js"%}"></script>
     <script src="{%static "js/React/libraries/react-dom.js"%}"></script>
     <script src="{%static "js/React/libraries/classnames/index.js"%}"></script>
@@ -20,9 +25,11 @@
   <body>
 
 <div id="root"></div>
-    <script type="text/babel" src="{%static "js/React/cart-widget.js"%}">
-
-    </script>
+    
 
 </body>
+<script src="{%static "js/create item/cbpFWTabs.js"%}"></script>
+<script type="text/babel" src="{%static "js/React/cart-widget.js"%}">
+
+    </script>
 </html>
