--- a/templates/index.html
+++ b/templates/index.html
@@ -74,8 +74,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li><a href="booty" class="active">Print</a></li>
 					<li><a href="about.html">Explore</a></li>
 					<li><a href="portfolio.html">News</a></li>
-					<li><a href="samplepage.html">Login</a></li>
-					<li><a href="contact.html" >Sign up</a></li>
+					<li><a href={%url 'login'%}>Login</a></li>
+					<li><a href={%url 'signup'%} >Sign up</a></li>
 				</ul>	
 				<!-- script-for-menu -->
 				 <script>
